--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -5,7 +5,11 @@
     {{debug()}}
   </div>
   <ul class="list-inline pull-right">
-    <li><a href="#/games/group" class="btn btn-default">Begin Group Game</a></li>
+    <li>
+      <a href="#/games/group" class="btn btn-default">New Crowd Game
+        <img class="image image-btn" style="height: 25px;" ng-src="images/crowd_game.png">
+      </a>
+    </li>
   </ul>
 </div>
 
