--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,35 @@
 
 </body>
 
+<script type="text/ng-template" id="loginGroupUser.html">
+  <div class="modal-header">
+    <h4 class="modal-title">Authentication Needed.</h4>
+  </div>
+  <div class="modal-body">
+    <p>{{user.name}}, you must provide your password to continue.</p>
+    <form class="form-horizontal">
+      <div class="form-group">
+        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+        <div class="col-sm-10">
+          <input ng-model="user.email" type="email" class="form-control" placeholder="Email">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+        <div class="col-sm-10">
+          <input ng-model="user.password" type="password" class="form-control" placeholder="Password">
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <div class="btn-group">
+      <button ng-click="login(user)" class="btn btn-primary">Sign in</button>
+      <button ng-click="cancel()" class="btn btn-info">Back</button>
+    </div>
+  </div>
+</script>
+
 <script type="text/ng-template" id="instructions.html">
         <div class="modal-header">
             <h3 class="modal-title">Game Instructions</h3>
