--- a/public/templates/phase/3.html
+++ b/public/templates/phase/3.html
@@ -30,7 +30,7 @@
   <div ng-repeat="ration in game.allRations" class="ration ration-board clickable"
         ng-click="selectRation(ration)"
         style="left: {{left+ration.position.centre_x-10}}px; top: {{top+ration.position.centre_y-10}}px;
-        border-color:{{ration.game_user.colour}}; background-color:{{ration.id == user.move.ration.id ? ration.game_user.colour : ''}};">
+        border-color:{{ration.game_user.colour}}; background-color:{{ration.id == player.move.ration.id ? ration.game_user.colour : ''}};">
     <div ng-repeat="ingredient in ration.ingredients" class="ration-ingredient {{ingredient.ingredient_cat.name}}"></div>
   </div>
 
@@ -39,9 +39,9 @@
 
   <div ng-repeat="pos in possiblePositions" ng-if="pos.depth > 0"
         class="move-position {{pos.depth == 1 && !moving ? 'move-position-first clickable' : ''}}
-        {{pos.depth >= user.move.movements_left && !moving ? 'move-position-first clickable' : ''}}"
+        {{pos.depth >= player.move.movements_left && !moving ? 'move-position-first clickable' : ''}}"
         style="left: {{left+pos.centre_x}}px; top: {{top+pos.centre_y}}px; padding-left:3px;"
-        ng-click="moveRation(pos.id, pos.depth >= user.move.movements_left)">{{pos.depth}}
+        ng-click="moveRation(pos.id, pos.depth >= player.move.movements_left)">{{pos.depth}}
         {{pos.rations.length > 0 ? 'pushable' : ''}}
   </div>
 
@@ -62,8 +62,8 @@
 
   <div ng-if="game.checkPhase(3) && game.checkTurn()" class="bar bar-bottom bar-light">
     <div class="area pull-left">
-      <p ng-if="getStage() == 0">{{user.getName()}}, you have no food rations to move. Next turn try creating one with ingredient cards.</p>
-      <p ng-if="getStage() == 1">{{user.getName()}}, select a ration on the board that you want to move.</p>
+      <p ng-if="getStage() == 0">{{player.getName()}}, you have no food rations to move. Next turn try creating one with ingredient cards.</p>
+      <p ng-if="getStage() == 1">{{player.getName()}}, select a ration on the board that you want to move.</p>
       <p ng-if="getStage() == 2">Now confirm it, and you'll get a choice of dice to use.</p>
       <p ng-if="getStage() == 3">Select a dice, you will be able to move the value shown.</p>
       <p ng-if="getStage() == 4">If you're happy with that dice, click on one of the positions shown in green to start moveing.</p>
