--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -35,7 +35,7 @@
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <button ng-click="login(user)" class="btn btn-primary">Sign in</button>
-          <a href="#/register" class="btn btn-default pull-right">Register</a>
+          <a ng-click="register()" class="btn btn-default pull-right">Register</a>
         </div>
       </div>
     </form>
