--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -39,7 +39,7 @@
           <div class="form-group">
             <label for="password-conf" class="col-sm-2 control-label">Confirm Password</label>
             <div class="col-sm-10">
-              <input type="password" ng-model="passwordConf" class="form-control" id="password-conf" placeholder="Confrim Password">
+              <input type="password" ng-model="passwordConf" class="form-control" id="password-conf" placeholder="Confirm Password">
             </div>
           </div>
         </div>
