--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,9 +25,7 @@
 
 <%= yield %>
 
-</body>
-
-<script type="text/ng-template" id="loginGroupUser.html">
+<script type="text/ng-template" id="loginUser.html">
   <div class="modal-header">
     <h4 class="modal-title">Authentication Needed.</h4>
   </div>
@@ -51,6 +49,52 @@
   <div class="modal-footer">
     <div class="btn-group">
       <button ng-click="login(user)" class="btn btn-primary">Sign in</button>
+      <button ng-click="cancel()" class="btn btn-info">Back</button>
+    </div>
+  </div>
+</script>
+
+<script type="text/ng-template" id="register.html">
+  <div class="modal-header">
+    <h4 class="modal-title">Register to create and account.</h4>
+  </div>
+  <div class="modal-body">
+    <form novalidate class="form-horizontal">
+      <div class="form-group">
+        <label for="email" class="col-sm-2 control-label">Email</label>
+        <div class="col-sm-10">
+          <input ng-model="user.email" type="email" class="form-control" placeholder="Email" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="name" class="col-sm-2 control-label">Name</label>
+        <div class="col-sm-10">
+          <input ng-model="user.name" type="text" class="form-control" placeholder="Name" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="password" class="col-sm-2 control-label">Password</label>
+        <div class="col-sm-10">
+          <input ng-model="user.password" type="password" class="form-control" placeholder="Password" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="password-conf" class="col-sm-2 control-label">Confirm Password</label>
+        <div class="col-sm-10">
+          <input ng-model="user.password_conf" type="password" class="form-control" placeholder="" required>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="password-conf" class="col-sm-2 control-label">Notice</label>
+        <div class="col-sm-10">
+          <p>Please appretiate that while we will not use your email and name for any use other than managing your account for the HappyCowGame, we also cannot ensure that your details are perfectly safe while the game is still under development. If this concerns you please, use a fake email or nickname.</p>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <div class="btn-group">
+      <button ng-click="register(user)" class="btn btn-primary">Register</button>
       <button ng-click="cancel()" class="btn btn-info">Back</button>
     </div>
   </div>
@@ -156,3 +200,5 @@
         </div>
     </script>
 </html>
+
+</body>
