--- a/public/templates/game_setup.html
+++ b/public/templates/game_setup.html
@@ -36,12 +36,12 @@
             <td>{{game_user.user.experience}}</td>
             <td><span class="label label-default" style="background-color: {{game_user.colour}};">sample</span></td>
             <td>
-              <button ng-if="user.isCreator(game) && !game_user.network && game_user.user_id != $storage.user.id" ng-click="setNetwork(game_user, false)" class="btn btn-info btn-xs">Make Distant</button>
-              <span ng-if="!user.isCreator(game) && !game_user.network">Present</span>
+              <span ng-if="!game_user.network" class="glyphicon glyphicon-ok"></span>
+              <button ng-if="user.isCreator(game) && !game_user.network && game_user.user_id != $storage.user.id" ng-click="setNetwork(game_user, true)" class="btn btn-info btn-xs">Make Distant</button>
             </td>
             <td>
+              <span ng-if="game_user.network" class="glyphicon glyphicon-ok"></span>
               <button ng-if="user.isCreator(game) && game_user.network && game_user.user_id != $storage.user.id" ng-click="setNetwork(game_user, false)" class="btn btn-info btn-xs">Make Present</button>
-              <span ng-if="!user.isCreator(game) && game_user.network">Distant</span>
             </td>
             <td>
               <button ng-if="!game_user.network && !auth_games.loggedIn(game.id, game_user.user_id) && game_user.user_id != $storage.user.id"
@@ -125,7 +125,7 @@
       </div>
       <div ng-if="!setup()" class="btn-group pull-right">
         <button ng-click="leave()" class="btn btn-warning">Leave</button>
-        <button ng-if="game.stave > 0" ng-click="begin()" class="btn btn-primary">Resume</button>
+        <button ng-if="game.stage > 0" ng-click="begin()" class="btn btn-primary">Resume</button>
     </div>
   </div>
 </div>
